--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -34,9 +34,9 @@ p, details, #cr, #tab_video1, #tab_video2 {
     width: 100px;
     height: 50px;
     display: block;
-    margin: 5px;
+    margin-bottom: 5px;
     border: 2px solid #5C1E20;
-    border-radius: 10px 10px 30px;
+    border-radius: 5px 40px 5px 0;
     text-decoration: none;
     text-align: center;
 }
