Creat css specific ecran mic

--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -190,3 +190,9 @@ header {
     vertical-align: center;
     transform: translateY(30%);
 }
+
+figure  picture {
+    height: 100%;
+    width: 100%;
+    max-width: 450px;
+}
