--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -124,21 +124,11 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer, #tab_video1, #tab_vide
     margin: 10px;
     margin-bottom: 10px;
 }
-/* 
-#video {
-    display: block;
-    margin: auto;
-} */
-/* 
-#tab_video1, #tab_video2 {
-    display: block;
-    margin: auto;
-    text-align: center;
-} */
 
 #pic {
     display: block;
     margin: auto;
+    width: 50%;
     max-width: fit-content;
 }
 
@@ -186,35 +176,39 @@ header {
 }
 
 
+
 #link-top {
-    position:fixed;
-    bottom:0.7em;
-    opacity:0.5;
-    left:0.7em;
-    width:4.5rem;
+    position: fixed;
+    bottom: 1.3em;
+    opacity: 0.5;
+    left: 1.3em;
+    width: 4rem;
+    height: 4rem;
     box-sizing: border-box;
-    height:4.5rem;
-    line-height:3rem;
-    text-align:center;
-    border:5px solid grey;
-    border-top-color: #421112;
-    border-radius:50%;
-    background: rgb(220,220,220);
+    line-height: 3rem;
+    text-align: center;
+    border: 3px solid #421112;
+    /* border-top-color: #421112; */
+    /* border-radius: 50%; */
+    transform: rotate(45deg);
+    background: white;
+    justify-content: center;
 }
 
 #link-top:hover {
-    opacity:1;
+    opacity: 1;
 }
 
 #triunghi {
-    height:0px;
-    width:0;
-    display:inline-block;
-    border-bottom:1.5rem solid grey;
-    border-left:1rem solid transparent;
-    border-right:1rem solid transparent;
+    height: 0;
+    width: 0;
+    display: inline-block;
+    border-bottom: 2rem solid #421112;
+    border-radius: 0 0 1.3rem 1.3rem;
+    border-left: 1.1rem solid transparent;
+    border-right: 1.1rem solid transparent;
     vertical-align: center;
-    transform: translateY(30%);
+    transform: translateY(35%) rotate(-45deg);
 }
 
 figure  picture {
