--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -11,6 +11,11 @@ html {
     background-color: #C9A0A0;
 }
 
+body {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
 h1, h2, h3  {
     /* font-family: monospace; */
     font-size: 2rem;
@@ -65,7 +70,6 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer, #tab_video1, #tab_vide
     width: 100%;
     height: 90%;
 }
-
 
 .zona {
     border: 2px solid #421112;
@@ -211,7 +215,7 @@ header {
     transform: translateY(35%) rotate(-45deg);
 }
 
-figure  picture {
+figure picture {
     height: 100%;
     width: 100%;
     max-width: 450px;
