--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -240,7 +240,7 @@ header {
     padding: 30px;
     font-size: 1.5rem;
     border: 2px solid #421112;
-    transition: background-color 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .tabel thead tr {
