--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -6,7 +6,7 @@
 
 html {
     font-size: 8px;
-    font-family: monospace;
+    font-family: Oxanium;
     --culoare-text: #050301;
     background-color: #C9A0A0;
 }
@@ -17,9 +17,7 @@ body {
 }
 
 h1, h2, h3  {
-    /* font-family: monospace; */
     font-size: 2rem;
-    /* color: #050301; */
     padding: 5px;
 }
 
@@ -28,8 +26,7 @@ h1, h2, h3  {
     font-size: 3rem;
 }
 
-p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer, #tab_video1, #tab_video2 {
-    /* font-family: monospace; */
+p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer {
     font-size: 1.5rem;
     color: var(--culoare-text);
     padding: 10px;
@@ -72,7 +69,8 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer, #tab_video1, #tab_vide
 }
 
 .zona {
-    border: 2px solid #421112;
+    border: 5px solid #421112;
+    border-radius: 20px;
     margin: 10px;
 }
 
@@ -81,6 +79,17 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer, #tab_video1, #tab_vide
 }
 
 #zona2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    justify-self: center;
+    /* border: 5px solid #5C1E20;
+    border-radius: 20px; */
+    background-color: #C9A0A0;
+    overflow: hidden;
+    overflow-x: auto;
+    width: 90%;
     grid-area: zona2;
 }
 
@@ -179,8 +188,6 @@ header {
     border: 5px solid #421112;
 }
 
-
-
 #link-top {
     position: fixed;
     bottom: 1.3em;
@@ -219,4 +226,52 @@ figure picture {
     height: 100%;
     width: 100%;
     max-width: 450px;
+}
+
+.tabel {
+    padding: 30px;
+    font-size: 1.2rem;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.tabel thead th, .tabel tbody td {
+    padding: 30px;
+    font-size: 1.5rem;
+    border: 2px solid #421112;
+    transition: all 0.3s ease-in-out;
+}
+
+.tabel thead tr {
+    background-color: #A77272;
+}
+
+.tabel tbody td:nth-child(1), .tabel tbody td:nth-child(3) {
+    background-color: #A77272;
+}
+
+.tabel thead tr:nth-child(1), .tabel thead tr:nth-child(3) {
+    background-color: #8A5151;
+}
+
+.tabel tbody td:hover {
+    background-color: white;
+}
+
+.tabel tbody tr:hover td:not(:hover) {
+    background-color: #F6CCCC;
+}
+
+/* CAPTION SUB TABEL */
+.tabel caption {
+    border: none;
+    caption-side: bottom;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.tabel tfoot td, .tabel tfoot > tr {
+    text-align: justify;
+    padding: 10px;
+    border: none;
 }
