--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -4,8 +4,12 @@
     src: url("../fonts/PixeloidSans-Bold.ttf");
 }
 
+/* * {
+    box-sizing: border-box;
+} */
+
 html {
-    font-size: 8px;
+    font-size: 7px;
     font-family: Oxanium;
     --culoare-text: #050301;
     background-color: #C9A0A0;
@@ -14,10 +18,12 @@ html {
 body {
     margin-left: 3px;
     margin-right: 3px;
+    width: auto;
+    display: block;
 }
 
 h1, h2, h3  {
-    font-size: 2rem;
+    font-size: 1.8rem;
     padding: 5px;
 }
 
@@ -26,7 +32,7 @@ h1, h2, h3  {
     font-size: 3rem;
 }
 
-p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer {
+p, details, #cr {
     font-size: 1.5rem;
     color: var(--culoare-text);
     padding: 10px;
@@ -71,25 +77,27 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer {
 .zona {
     border: 5px solid #421112;
     border-radius: 20px;
-    margin: 10px;
+    overflow: hidden;
 }
 
 #zona1 {
+    justify-items: center;
+    align-items: center;
     grid-area: zona1;
 }
 
 #zona2 {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     align-self: center;
-    justify-self: center;
     /* border: 5px solid #5C1E20;
     border-radius: 20px; */
     background-color: #C9A0A0;
     overflow: hidden;
     overflow-x: auto;
-    width: 90%;
+    width: 80%;
+    position: relative;
     grid-area: zona2;
 }
 
@@ -119,6 +127,7 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer {
 
 #grid_pag {
     display: grid;
+    gap: 1px 1px;
     grid-template-areas: "zona1"
                          "zona2"
                          "zona3"
@@ -127,6 +136,11 @@ p, details, #cr, #salt, #pag1, #pag2, #secinsp, #secofer {
                          "zona6"
                          "zona7"
                          "zona8";
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    overflow: hidden;
 }
 
 #desprenoi, #inspiratie, #ceoferim, footer {
@@ -162,7 +176,6 @@ header {
     height: 40px;
     vertical-align: text-bottom;
 }
-
 
 #logo, #titlu {
     display: inline-flex;
@@ -222,16 +235,29 @@ header {
     transform: translateY(35%) rotate(-45deg);
 }
 
-figure picture {
+figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
     height: 100%;
     width: 100%;
-    max-width: 450px;
+    max-width: 500px;
+}
+
+figure img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .tabel {
+    justify-content: center;
+    align-content: center;
     padding: 30px;
-    font-size: 1.2rem;
-    width: 100%;
+    font-size: 1.5rem;
+    width: 90%;
+    min-width: 100%;
     border-collapse: collapse;
 }
 
