--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -70,11 +70,6 @@ p, details, #cr, #tab_video1, #tab_video2 {
     width: 90%;
 }
 
-#video {
-    width: 350px; 
-    height: 250px;
-}
-
 .zona {
     border: 5px solid #421112;
     border-radius: 20px;
@@ -91,8 +86,6 @@ p, details, #cr, #tab_video1, #tab_video2 {
     align-items: center;
     align-self: center;
     justify-self: center;
-    /* border: 5px solid #5C1E20;
-    border-radius: 20px; */
     background-color: #C9A0A0;
     overflow: hidden;
     width: 90%;
@@ -120,6 +113,9 @@ p, details, #cr, #tab_video1, #tab_video2 {
 }
 
 #zona8 {
+    border: none;
+    margin: 5px;
+    padding: 5px;
     grid-area: zona8;
 }
 
@@ -143,15 +139,15 @@ p, details, #cr, #tab_video1, #tab_video2 {
     background-color: #C9A0A0;
     padding: 10px;
     margin: 10px;
-    margin-bottom: 10px;
-    width: 90%;
+    box-sizing: border-box;
+    justify-content: flex-start;
 }
 
 #pic {
     display: block;
-    width: 70%;
-    max-width: 500px;
-    height: 100%;
+    margin: auto;
+    width: 50%;
+    max-width: fit-content;
 }
 
 footer {
