--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -5,7 +5,7 @@
 }
 
 /* RESETARE CSS */
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -46,10 +46,12 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+} */
+
 
 
 html {
+    padding-top: 10px;
     font-size: 10px;
     font-family: Oxanium;
     --culoare-text: #050301;
@@ -72,7 +74,7 @@ h1, h2, h3  {
     font-size: 3rem;
 }
 
-p, details, #cr, #tab_video1, #tab_video2 {
+p, details, #cr {
     font-size: 1.5rem;
     color: var(--culoare-text);
     padding: 10px;
@@ -80,10 +82,12 @@ p, details, #cr, #tab_video1, #tab_video2 {
 
 /* stilizare taburi iframe */
 .taburi-iframe > a {
+    font-weight: bolder;
     width: 70px;
     height: 35px;
     display: block;
     margin-bottom: 5px;
+    color: #050301;
     border: 2px solid #5C1E20;
     border-radius: 5px 30px 5px 0;
     text-decoration: none;
@@ -107,12 +111,20 @@ p, details, #cr, #tab_video1, #tab_video2 {
 
 .taburi-iframe > a:hover {
     background-color: #5C1E20;
-    color: #C9A0A0;
+    color: #F6CCCC;
     transition: all 0.2s linear;
 }
 
 .container-iframe > iframe {
-    width: 90%;
+    position: relative;
+    display: flex;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .zona {
@@ -179,7 +191,7 @@ p, details, #cr, #tab_video1, #tab_video2 {
     border-radius: 20px;
 }
 
-#desprenoi, #inspiratie, #ceoferim, footer {
+#desprenoi, #inspiratie, #ceoferim {
     border: 5px solid #5C1E20;
     border-radius: 15px 50px;
     background-color: #C9A0A0;
@@ -197,7 +209,10 @@ p, details, #cr, #tab_video1, #tab_video2 {
 }
 
 footer {
+    border: 5px solid #5C1E20;
+    border-radius: 20px;
     background-color: #A77272;
+    padding: 10px;
 }
 
 header {
